# Stockwebsite

./: README.md
auto_stocks/: Dockerfile  README.md  component_stock_manager.py  database_manager.py  main.py  pyproject.toml  requirements.txt  stock_dividend_manager.py  stock_util.py  test.py  test2.py  test3.py
stock website/: .env.production  Dockerfile  package-lock.json  package.json  vite.config.ts  vue.config.js
stock website/src/: App.vue  main.ts
stock website/src/components/: stockindex.vue
stock website/src/router/: index.ts
stock website/src/server/: index.ts
stock website/src/stores/: index.ts  type.ts
